Fix stretching of app window header image

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
-@font-face {
+/* @font-face {
   font-family: smallestPixel;
   src: url('./fonts/smallest_pixel-7.ttf');
-}
+} */
 
 div.App {
   /* background: linear-gradient(#2c73ba, #5A7B9B); */
   background-color: #0978B2;
   color: whitesmoke;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
   font-weight: 100;
   height: 100vh;
   margin: 0;
