--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@ body {
   cursor: pointer;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Helvetica, sans-serif;
   font-size: 10px;
 }
